2000-09-21  Arkadiusz Miskiewicz <misiek@pld.org.pl>

	* ftpclass.cc: fix addr_received initialization for ipv6.

2000-09-21  Alexander V. Lukyanov  <lav@yars.free.net>

	* module.cc: aliases for https and ftps.

2000-09-19  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc: fix error on some compilers (e.g. irix).

2000-09-15  Alexander V. Lukyanov  <lav@yars.free.net>

	* pgetJob.cc: fix yet another hang bug (hopefully last).

2000-09-14  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: move out of CONNECTING_DATA_SOCKET after DataClose
	  (fixes rare `bad file number' error).
	* MirrorJob.cc: propagate remove_source_files to submirrors.

2000-09-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc: include modconfig.h. (fixes module compilation).

2000-09-11  Alexander V. Lukyanov  <lav@yars.free.net>

	* buffer.cc: handle eof on ssl connection properly.

2000-09-08  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: don't remember path=/ in cookies; skip all spaces
	  before a cookie.

2000-09-07  Alexander V. Lukyanov  <lav@yars.free.net>

	* MirrorJob.cc, MirrorJob.h: support for redirection.
	* CmdExec.cc: move `cd' out ot translated string.
	* Http.cc, LocalAccess.cc, Fish.cc, MirrorJob.cc, SleepJob.cc:
	  don't rely on MODULE.
	* Makefile.am: don't define MODULE.

2000-09-05  Alexander V. Lukyanov  <lav@yars.free.net>

	* GetJob.cc, GetJob.h: restore mode on new file.

2000-09-05  Matthias Andree <matthias.andree@gmx.de>

	* FtpDirList.cc: reformat EPLF even if mtime if absent.

2000-08-30  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: try PORT if connect fails after fixing
	  pasv address.
	* Http.cc: really skip rest of body from recv_buf; call recv_buf->Do.

2000-08-29  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: fix error handling for port-range; bind local address
	  to data socket in passive mode (helps for rare case of routing change).
